- fix: Make first appoiment icon smaller - feat: When click on event, it display the infor into a slideover

--- a/src/pages/Calendar/styles.css
+++ b/src/pages/Calendar/styles.css
@@ -4,6 +4,7 @@
     right: 0;
     padding: 5px;
     color: yellow;
+    font-size: 15px;
     /* background-color: #ffffff; Background color of the icon container */
   }
   
